--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -81,3 +81,183 @@
     width: 40px;
     height: 40px;
 }
+
+
+/* Sidebar  */
+
+.sidebar {
+    position: fixed;
+    width: 300px;
+    height: 100vh;
+    z-index: 2;
+    top: 0;
+    right: -500px;
+    background-color: var(--default-primary);
+    transition: .4s;
+}
+
+.sidebar > div {
+    display: flex;
+    padding: 24px 24px;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 48px;
+}
+
+.sidebar .header_section {
+    display: flex;
+    height: 48px;
+    padding: 12px 0px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+.close_menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: none;
+    cursor: pointer;
+    opacity: 0.5;
+    transition: opacity 0.5s ease-out;
+}
+
+.close_menu:hover {
+    opacity: 1;
+}
+
+#close_icon {
+    width: 40px;
+    height: 40px;
+}
+
+.sidebar_logo_holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 8px;
+    background: rgba(136, 136, 136, 0.12);
+}
+
+.sidebar_icon {
+    width: 24px;
+    filter: invert(1);
+}
+
+.sidebar .sidebar_items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+}
+ 
+.sidebar .sidebar_items .nav_item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 12px;
+}
+
+.sidebar .sidebar_items .nav_item:hover {
+    background: rgba(136, 136, 136, 0.12);
+    transition: background-color 0.5s ease-out;
+}
+
+#active_sidebar_item {
+    background: rgba(136, 136, 136, 0.12);
+}
+
+.sidebar .sidebar_items .nav_item .nav_link{
+    color: var(--default-white);
+    text-align: justify;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;    
+    padding: 16px 20px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .navbar {
+        padding: 24px 80px;
+    }
+}
+
+
+@media only screen and (max-width: 992px) {
+    .navbar {
+        padding: 20px 64px;
+    }
+    
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    .navbar {
+        padding: 8px 40px;
+    }
+
+    .navbar .navbar_items  {
+        display: none;
+    }
+
+    .navbar .hamburger_menu {
+        display: block;
+    }
+
+
+    .sidebar.active {
+        right: 0;
+        display: block;
+    }
+
+    .sidebar_backdrop.show_backdrop {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+
+}
+
+
+@media only screen and (max-width: 576px) {
+
+    .navbar {
+        padding: 4px 24px;
+    }
+
+    .navbar .navbar_items  {
+        display: none;
+    }
+
+    .navbar .hamburger_menu {
+        display: block;
+    }
+
+    .sidebar.active {
+        right: 0;
+        display: block;
+    }
+
+    .sidebar_backdrop.show_backdrop {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+}
